--- a/index.html
+++ b/index.html
@@ -5,9 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACME Onboarding</title>
+    <link rel="stylesheet" href="./index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
 
+<div class="wrapper">
+    <div class="left">
+        <ul>
+            <li>
+                <img class="logo" src="assets/acme-logo.png" border="0" width="100" height="56" alt="">
+                <span class="logo-title">Onboarding</span>
+            </li>
+            <li class="emails">
+                You are logged in as hello@blah.com <br>
+                For help email it@acmecorp.com
+            </li>
+            <li class="label">
+                <span>1. Welcome</span>
+                <div class="info check-icon">
+                    <img src="assets/check.png" border="0" width="41" height="41" alt="">
+                </div>
+            </li>
+            <li class="label">
+                <span>2. Email Setup</span>
+                <div class="info"> 85% </div>
+                <div class="right-arrow">
+
+                </div>
+            </li>
+            <li class="label disable">
+                <span>3. 2fa Setup</span>
+                <div class="info"> 0% </div>
+            </li>
+        </ul>
+    </div>
+    <div class="right">
+
+    </div>
+</div>
 
 </body>
 </html>
