completed right side

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="left">
         <ul>
             <li>
-                <img class="logo" src="assets/acme-logo.png" border="0" width="100" height="56" alt="">
+                <img class="logo" src="assets/acme-logo.png"  width="100" height="56" alt="">
                 <span class="logo-title">Onboarding</span>
             </li>
             <li class="emails">
@@ -22,25 +22,98 @@
                 For help email it@acmecorp.com
             </li>
             <li class="label">
-                <span>1. Welcome</span>
-                <div class="info check-icon">
-                    <img src="assets/check.png" border="0" width="41" height="41" alt="">
-                </div>
+                <a href="#">
+                    <span>1. Welcome</span>
+                    <div class="info check-icon">
+                        <img src="assets/check.png"  width="41" height="41" alt="">
+                    </div>
+                </a>
             </li>
             <li class="label">
-                <span>2. Email Setup</span>
-                <div class="info"> 85% </div>
-                <div class="right-arrow">
-
-                </div>
+                <a href="#">
+                    <span>2. Email Setup</span>
+                    <div class="info"> 85% </div>
+                    <div class="right-arrow"></div>
+                </a>
             </li>
             <li class="label disable">
-                <span>3. 2fa Setup</span>
-                <div class="info"> 0% </div>
+                <a href="#">
+                    <span>3. 2fa Setup</span>
+                    <div class="info"> 0% </div>
+                </a>
+            </li>
+            <li class="label disable">
+                <a href="#">
+                    <span>3. 2fa Setup</span>
+                    <div class="info"> 0% </div>
+                </a>
+            </li>
+            <li class="label disable">
+                <a href="#">
+                    <span>3. 2fa Setup</span>
+                    <div class="info"> 0% </div>
+                </a>
+            </li>
+            <li class="label disable">
+                <a href="#">
+                    <span>3. 2fa Setup</span>
+                    <div class="info"> 0% </div>
+                </a>
+            </li>
+            <li class="label disable">
+                <a href="#">
+                    <span>3. 2fa Setup</span>
+                    <div class="info"> 0% </div>
+                </a>
+            </li>
+            <li class="label disable">
+                <a href="#">
+                    <span>3. 2fa Setup</span>
+                    <div class="info"> 0% </div>
+                </a>
+            </li>
+            <li class="label disable">
+                <a href="#">
+                    <span>3. 2fa Setup</span>
+                    <div class="info"> 0% </div>
+                </a>
+            </li>
+            <li class="label disable">
+                <a href="#">
+                    <span>3. 2fa Setup</span>
+                    <div class="info"> 0% </div>
+                </a>
+            </li>
+            <li class="label disable">
+                <a href="#">
+                    <span>3. 2fa Setup</span>
+                    <div class="info"> 0% </div>
+                </a>
             </li>
         </ul>
     </div>
     <div class="right">
+
+        <p class="title">
+            3. Email Setup
+        </p>
+        <p class="information">
+            This guide will walk you through setting up your email. If you have any questions, please email us.
+        </p>
+
+        <div class="video">
+            <iframe width="633" height="356" src="https://www.youtube.com/embed/vybviJHUDo0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+
+        <div class="video-links">
+            <a href="#" class="passive">
+                Previous
+            </a>
+
+            <a href="#" class="active">
+                Next >
+            </a>
+        </div>
 
     </div>
 </div>
